# ARKADEManager

./: .gitignore  ArkadeManager.spec  BUILD_INSTRUCTIONS.md  CHANGELOG.md  INSTALL.md  MANUAL_INSTALL.md  QUICKSTART.md  README.md  build.py  build_exe.bat  build_exe.sh  cleanup-test-server.ps1  index.html  main.py  package-lock.json  package.json  requirements.txt  restore-version.ps1  setup-test-server.ps1  setup.bat  setup.py  setup.sh  test-update.ps1  vite.config.js
.github/workflows/: build.yml  discord-notify.yml  discord-release-notification.yml
arkade_manager_full/core/: theme.py
arkade_manager_full/tabs/: tab_backups.py  tab_plugins.py  tab_plugintoggle.py
core/: backup_core.py  backup_jobs.json  config.json  logger.py  overdue_patch.py  update_checker.py
dist_backup/: index.html
dist_backup/src/: main.js
public/: README.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: .gitkeep
src-tauri/src/: app_data.rs  backup.rs  config.rs  data_lookup.rs  job.rs  main.rs  map.rs  palworld_rcon.rs  plugins.rs  scheduler.rs  server_roots.rs  validation.rs
tabs/: joblist_helpers.py  tab_backups.py  tab_game_ini.py  tab_gus_ini.py  tab_logs.py  tab_newIP.py  tab_plugin_manager.py  tab_tribefile.py
