[package]
name = "arkade-manager"
version = "2.0.2"
description = "ARKADE Manager - ARK Survival Ascended Server Management Tool"
authors = ["ARKADE Manager"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6"
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
simplelog = { version = "0.12" }

[dev-dependencies]
tempfile = "3.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

